android-platform-frameworks-base (1:5.1.1+r8-1) UNRELEASED; urgency=low

  * Change version scheme to follow Android release tags
  * get-orig-source rule in d/rules for generating upstream tarballs
  * Add myself to Uploaders
  * d/control:
    - Change priority to optional
    - Change architecture to any
  * Makefiles independent from Quilt
  * New package: aidl
  * New aapt_Images_cpp_Res_png_9patch.diff: Fix API mistake
  * Install symlinks to faked SDK home

 -- Kai-Chung Yan <seamlikok@gmail.com>  Mon, 27 Jul 2015 23:06:02 +0800

android-platform-frameworks-base (21-2) unstable; urgency=low

  * add versions to shlibs so dh can do dep detection
    (Closes: #768821) (Closes: #769236)
  * set Android Tools team as Maintainer
  * fix installation of aapt bash completion rules

 -- Hans-Christoph Steiner <hans@eds.org>  Tue, 02 Dec 2014 14:36:42 +0100

android-platform-frameworks-base (21-1) unstable; urgency=low

  * Initial release (Closes: #763571)

 -- Hans-Christoph Steiner <hans@eds.org>  Tue, 30 Sep 2014 20:55:30 -0400