@@ -1,2 +1,3 @@
 tools/aapt/aapt               usr/bin
 debian/bash_completion.d/aapt etc/bash_completion.d
+tools/aapt/libaapt.so*        usr/lib/android
