@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-export UPSTREAM_UNIFIED_VERSION = 5.1.1.8
+export UPSTREAM_LIBVERSION = 5.1.1.8
 export UPSTREAM_TAG = android-5.1.1_r8
 export UPSTREAM_VERSION = 5.1.1+r8
 export PACKAGE_NAME = android-platform-frameworks-base
