@@ -1,0 +1,3 @@
+#!/usr/bin/dh-exec
+
+usr/bin/split-select   usr/share/android-sdk/build-tools/${BUILD_TOOLS_VERSION}/split-select
