@@ -7,9 +7,10 @@ android-platform-frameworks-base (1:5.1.1+r8-1) UNRELEASED; urgency=low
     - Change priority to optional
     - Change architecture to any
   * Makefiles independent from Quilt
-  * New package: aidl
+  * New package: aidl, split-select
   * New aapt_Images_cpp_Res_png_9patch.diff: Fix API mistake
   * Install symlinks to faked SDK home
+  * Use makefiles to generate symlinks
 
  -- Kai-Chung Yan <seamlikok@gmail.com>  Mon, 27 Jul 2015 23:06:02 +0800
 
